Fixed bug #70957 (self::class can not be resolved with reflection for abstract class)