Zend/zend_compile.c
@@ -2,7 +2,7 @@
    +----------------------------------------------------------------------+
    | Zend Engine                                                          |
    +----------------------------------------------------------------------+
-   | Copyright (c) 1998-2016 Zend Technologies Ltd. (http://www.zend.com) |
+   | Copyright (c) 1998-2015 Zend Technologies Ltd. (http://www.zend.com) |
    +----------------------------------------------------------------------+
    | This source file is subject to version 2.00 of the Zend license,     |
    | that is bundled with this package in the file LICENSE, and is        |
@@ -2215,15 +2215,9 @@ void zend_do_resolve_class_name(znode *result, znode *class_name, int is_static 
 				zend_error_noreturn(E_COMPILE_ERROR, "Cannot access self::class when no class scope is active");
 			}
 			if ((CG(active_class_entry)->ce_flags & ZEND_ACC_TRAIT) == ZEND_ACC_TRAIT) {
-				zval_dtor(&class_name->u.constant);
 				constant_name.op_type = IS_CONST;
-				ZVAL_STRINGL(&constant_name.u.constant, "__CLASS__", sizeof("__CLASS__")-1, 1);
-				if (is_static) {
-					*result = constant_name;
-					result->u.constant.type = IS_CONSTANT;
-				} else {
-					zend_do_fetch_constant(result, NULL, &constant_name, ZEND_RT, 1 TSRMLS_CC);
-				}
+				ZVAL_STRINGL(&constant_name.u.constant, "class", sizeof("class")-1, 1);
+				zend_do_fetch_constant(result, class_name, &constant_name, ZEND_RT, 1 TSRMLS_CC);
 				break;
 			}
 			zval_dtor(&class_name->u.constant);
@@ -5402,7 +5396,7 @@ ZEND_API int zend_unmangle_property_name_ex(const char *mangled_property, int le
 
 	*class_name = NULL;
 
-	if (!len || mangled_property[0] != 0) {
+	if (mangled_property[0]!=0) {
 		*prop_name = mangled_property;
 		if (prop_len) {
 			*prop_len = len;
